databases/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: pgadmin
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pgadmin.db.6541333.xyz
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: cilium
  rules:
    - host: pgadmin.db.6541333.xyz
      http:
        paths:
          - backend:
              service:
                name: pgadmin
                port:
                  number: 3004
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pgadmin.db.6541333.xyz
      secretName: pgadmin-ingress
