databases/pgadmin/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
  namespace: pgadmin
spec:
  parentRefs:
    - name: db-gateway
      namespace: cilium-gateway
      sectionName: pgadmin
  hostnames:
    - pgadmin.db.6541333.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /misc/ping
      backendRefs:
        - name: pgadmin
          port: 3004

    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
        - type: ExternalAuth
          externalAuth:
            protocol: HTTP
            http:
              path: /api/authz/ext-authz/
              allowedHeaders:
                - Cookie
                - Accept
                - X-Forwarded-Proto
                - X-Forwarded-Host
                - X-Forwarded-Uri
                - X-Forwarded-Method
              allowedResponseHeaders:
                - Remote-User
                - Remote-Groups

            backendRef:
              group: ''
              kind: Service
              name: authelia
              namespace: authelia
              port: 9091

      backendRefs:
        - name: pgadmin
          port: 3004
